# cmd

./: .goreleaser.yaml  BUILD.bazel  LICENSE  README.md  cmd.go  go.mod  go.sum  parse_test.go  record-demo.Dockerfile  sample.md  shell.go  shell_test.go
.github/workflows/: release.yml
cmd/: main.go
demos/: record-script.sh
demos/intro/: intro.script  more-commands.md
